--- a/src/Header.css
+++ b/src/Header.css
@@ -2,4 +2,16 @@
     flex-direction: row !important;
     align-items: center;
     justify-content: space-between;
+    padding: 5px;
+    padding-right: 20px;
 }
+
+.Cart {
+    display: flex;
+    align-items: center;
+}
+
+.Avatar {
+    margin: 0 20px;
+}
+
